@@ -9,41 +9,43 @@ import org.epos.eposdatamodel.EPOSDataModelEntity;
 import org.epos.eposdatamodel.LinkedEntity;
 import utilities.OperationWebserviceInDistributionSingleton;
 
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
 import java.lang.reflect.Method;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Locale;
-import java.util.Set;
-import java.util.UUID;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.logging.Level;
 import java.util.logging.Logger;
 
 /**
- * RelationChecker - Validates and creates entity relations.
+ * Validates and creates entity relations with cycle detection.
  *
- * Handles cycle detection and ensures proper relation creation between entities.
+ * <p>Reference entities are shared entities that prefer PUBLISHED versions
+ * when creating relations, unless operating in "ingestor" mode.</p>
  *
- * REFERENCE_ENTITIES are shared entities that should use PUBLISHED versions
- * when creating relations, unless the editor is "ingestor".
+ * <p><strong>Performance Notes:</strong></p>
+ * <ul>
+ *   <li>Cycle detection uses ThreadLocal to track in-flight operations per request</li>
+ *   <li>Reflection calls are cached to eliminate repeated method lookups</li>
+ *   <li>Entity type normalization is done once and cached where possible</li>
+ * </ul>
  */
 public class RelationChecker {
 
     private static final Logger LOG = Logger.getLogger(RelationChecker.class.getName());
 
-    private static final ThreadLocal<Set<String>> processingEntities =
-            ThreadLocal.withInitial(HashSet::new);
+    private static final ThreadLocal<Set<String>> processingEntities = ThreadLocal.withInitial(() -> new HashSet<>(8));
 
-    /**
-     * REFERENCE_ENTITIES: Shared entities that should use existing PUBLISHED versions
-     * instead of creating new versions during cascade.
-     *
-     * FIX: Added CATEGORYSCHEME to the list of reference entities.
+    /*
+     * Reference entities participate in cascade operations but should link
+     * to existing versions rather than being duplicated.
      */
     private static final Set<String> REFERENCE_ENTITIES = Set.of(
             EntityNames.ATTRIBUTION.name(),
             EntityNames.PERSON.name(),
             EntityNames.MAPPING.name(),
             EntityNames.CATEGORY.name(),
-            EntityNames.CATEGORYSCHEME.name(),  // FIX: Added CATEGORYSCHEME
+            EntityNames.CATEGORYSCHEME.name(),
             EntityNames.FACILITY.name(),
             EntityNames.EQUIPMENT.name(),
             EntityNames.OPERATION.name(),
@@ -67,9 +69,9 @@ public class RelationChecker {
             EntityNames.PAYLOAD.name()
     );
 
-    /**
-     * Special reference entities that are SHARED and should always use
-     * the PUBLISHED version (unless ingestor mode).
+    /*
+     * Shared reference entities always prefer PUBLISHED versions
+     * unless explicitly in ingestor mode.
      */
     private static final Set<String> SHARED_REFERENCE_ENTITIES = Set.of(
             EntityNames.CATEGORY.name(),
@@ -79,49 +81,58 @@ public class RelationChecker {
             EntityNames.CONTACTPOINT.name()
     );
 
-    /**
-     * Checks if an entity type is a shared reference entity.
-     */
+    // Pre-interned status string for hot-path comparisons
+    private static final String STATUS_PUBLISHED = StatusType.PUBLISHED.toString();
+    private static final String INGESTOR = "ingestor";
+
+    // Reflection caches to eliminate repeated introspection overhead
+    private static final ConcurrentHashMap<Class<?>, MethodHandle> VERSION_GETTERS = new ConcurrentHashMap<>();
+    private static final ConcurrentHashMap<Class<?>, MethodHandle> STATUS_GETTERS = new ConcurrentHashMap<>();
+    private static final ConcurrentHashMap<String, Method> PROPERTY_GETTERS = new ConcurrentHashMap<>();
+    private static final MethodHandles.Lookup LOOKUP = MethodHandles.lookup();
+
     private static boolean isSharedReferenceEntity(String entityType) {
-        if (entityType == null) return false;
-        return SHARED_REFERENCE_ENTITIES.contains(entityType.toUpperCase());
+        if (entityType == null) {
+            return false;
+        }
+        return SHARED_REFERENCE_ENTITIES.contains(entityType.toUpperCase(Locale.ROOT));
     }
 
     /**
-     * Determines if REFERENCE_ENTITY logic should be applied.
-     * Returns true if the entity is a shared reference entity AND
-     * the editor is not "ingestor".
+     * Determines whether to prefer PUBLISHED versions for this entity type.
+     * Returns false in ingestor mode to allow normal cascade behavior.
      */
     private static boolean shouldUsePublishedVersion(String entityType, EPOSDataModelEntity mainEntity) {
         if (!isSharedReferenceEntity(entityType)) {
             return false;
         }
-
-        // Ingestor mode: don't use special logic, cascade normally
         if (mainEntity != null) {
             String editorId = mainEntity.getEditorId();
-            if (editorId != null && "ingestor".equalsIgnoreCase(editorId.trim())) {
+            if (editorId != null && INGESTOR.equalsIgnoreCase(editorId.trim())) {
                 return false;
             }
         }
-
         return true;
     }
 
+    /**
+     * Builds a unique key for cycle detection.
+     * Prioritizes UID > MetaId > InstanceId for stability across versions.
+     */
     private static String getEntityKey(LinkedEntity linkedEntity) {
-        String base = linkedEntity.getEntityType() + ":";
-
-        if (linkedEntity.getUid() != null && !linkedEntity.getUid().trim().isEmpty()) {
-            return base + linkedEntity.getUid();
+        String entityType = linkedEntity.getEntityType();
+        String uid = linkedEntity.getUid();
+        if (uid != null && !uid.isBlank()) {
+            return entityType + ":" + uid;
         }
-
-        if (linkedEntity.getMetaId() != null && !linkedEntity.getMetaId().trim().isEmpty()) {
-            return base + linkedEntity.getMetaId();
+        String metaId = linkedEntity.getMetaId();
+        if (metaId != null && !metaId.isBlank()) {
+            return entityType + ":" + metaId;
         }
-
-        return base + linkedEntity.getInstanceId();
+        return entityType + ":" + linkedEntity.getInstanceId();
     }
 
+    @SuppressWarnings("rawtypes")
     public static Object checkRelation(EPOSDataModelEntity mainEntity,
                                        EPOSDataModelEntity oldMainEntity,
                                        Class mainEntityClazz,
@@ -133,9 +144,8 @@ public class RelationChecker {
         String entityKey = getEntityKey(linkedEntity);
         Set<String> processing = processingEntities.get();
 
-        boolean isInCycle = processing.contains(entityKey);
-
-        if (isInCycle) {
+        // Fast cycle detection before expensive operations
+        if (processing.contains(entityKey)) {
             return handleCycleCase(linkedEntity, clazz);
         }
 
@@ -151,12 +161,14 @@ public class RelationChecker {
         }
     }
 
+    @SuppressWarnings("rawtypes")
     private static Object handleCycleCase(LinkedEntity linkedEntity, Class clazz) {
         List<Object> results = EposDataModelDAO.getInstance()
                 .getOneFromDBByLinkedEntity(linkedEntity, clazz);
         return results.isEmpty() ? null : results.get(0);
     }
 
+    @SuppressWarnings({"rawtypes", "unchecked"})
     private static Object processRelation(EPOSDataModelEntity mainEntity,
                                           EPOSDataModelEntity oldMainEntity,
                                           Class mainEntityClazz,
@@ -169,30 +181,38 @@ public class RelationChecker {
             mainEntityClazz = mainEntity.getClass();
         }
 
-        LinkedEntity newLinkedEntityMainEntity = mainEntity == null ? null :
-                AbstractAPI.retrieveAPI(EntityNames.valueOf(mainEntityClazz.getSimpleName()
-                                .toUpperCase(Locale.ROOT)).name())
-                        .retrieveLinkedEntity(mainEntity.getInstanceId());
+        // Cache the entity type uppercase for multiple uses
+        String mainEntityTypeName = mainEntityClazz.getSimpleName().toUpperCase(Locale.ROOT);
+        String linkedEntityType = linkedEntity.getEntityType();
+        String linkedEntityTypeUpper = linkedEntityType != null ? linkedEntityType.toUpperCase(Locale.ROOT) : null;
 
-        LinkedEntity oldLinkedEntityMainEntity = oldMainEntity == null ? null :
-                AbstractAPI.retrieveAPI(EntityNames.valueOf(mainEntityClazz.getSimpleName()
-                                .toUpperCase(Locale.ROOT)).name())
-                        .retrieveLinkedEntity(oldMainEntity.getInstanceId());
+        LinkedEntity newLinkedEntityMainEntity = null;
+        if (mainEntity != null) {
+            AbstractAPI mainApi = AbstractAPI.retrieveAPI(EntityNames.valueOf(mainEntityTypeName).name());
+            if (mainApi != null) {
+                newLinkedEntityMainEntity = mainApi.retrieveLinkedEntity(mainEntity.getInstanceId());
+            }
+        }
+
+        LinkedEntity oldLinkedEntityMainEntity = null;
+        if (oldMainEntity != null) {
+            AbstractAPI mainApi = AbstractAPI.retrieveAPI(EntityNames.valueOf(mainEntityTypeName).name());
+            if (mainApi != null) {
+                oldLinkedEntityMainEntity = mainApi.retrieveLinkedEntity(oldMainEntity.getInstanceId());
+            }
+        }
 
         EPOSDataModelEntity relationEntity = (EPOSDataModelEntity)
                 LinkedEntityAPI.retrieveFromLinkedEntity(linkedEntity);
 
         LinkedEntity obj = null;
 
-        // FIX: For shared reference entities, try to find PUBLISHED version first
-        if (shouldUsePublishedVersion(linkedEntity.getEntityType(), mainEntity)) {
+        // Priority path: For shared reference entities, find PUBLISHED version first
+        if (shouldUsePublishedVersion(linkedEntityType, mainEntity)) {
             Object publishedVersion = findPublishedVersionOfEntity(linkedEntity, clazz);
             if (publishedVersion != null) {
-                obj = createLinkedEntityFromModel(publishedVersion, linkedEntity.getEntityType());
-                LOG.fine("[RelationChecker] REFERENCE_ENTITY: Found PUBLISHED version for " +
-                        linkedEntity.getEntityType() + " uid=" + linkedEntity.getUid());
-
-                // Return the published version directly
+                LOG.log(Level.FINE, "Reference entity PUBLISHED version found: {0} uid={1}",
+                        new Object[]{linkedEntityType, linkedEntity.getUid()});
                 return publishedVersion;
             }
         }
@@ -202,47 +222,27 @@ public class RelationChecker {
                     (mainEntity != null ? mainEntity.getStatus() : null);
 
             if (targetStatus != null) {
-                List<Object> allVersions = EposDataModelDAO.getInstance().getOneFromDBByUIDNoCache(relationEntity.getUid(), clazz);
+                String relationUid = relationEntity.getUid();
+                List<Object> allVersions = EposDataModelDAO.getInstance()
+                        .getOneFromDBByUIDNoCache(relationUid, clazz);
 
-                if (allVersions.isEmpty()) {
-                    allVersions = EposDataModelDAO.getInstance().getOneFromDBByUIDNoCache(relationEntity.getUid(), clazz);
-                }
-
-                // For shared reference entities, prefer PUBLISHED version
-                if (shouldUsePublishedVersion(linkedEntity.getEntityType(), mainEntity)) {
+                // For shared reference entities, prioritize PUBLISHED
+                if (shouldUsePublishedVersion(linkedEntityType, mainEntity)) {
                     for (Object v : allVersions) {
                         String statusStr = getModelVersionStatus(v);
-                        if (statusStr != null && statusStr.equals(StatusType.PUBLISHED.toString())) {
-                            try {
-                                obj = new LinkedEntity();
-                                obj.setInstanceId(getModelStrProperty(v, "getInstanceId"));
-                                obj.setMetaId(getModelStrProperty(v, "getMetaId"));
-                                obj.setUid(getModelStrProperty(v, "getUid"));
-                                obj.setEntityType(linkedEntity.getEntityType());
-
-                                // Return the published version
-                                return v;
-                            } catch (Exception e) {
-                                e.printStackTrace();
-                            }
+                        if (STATUS_PUBLISHED.equals(statusStr)) {
+                            return v;
                         }
                     }
                 }
 
-                // Normal behavior: find matching status
+                // Standard behavior: find matching status version
+                String targetStatusStr = targetStatus.toString();
                 for (Object v : allVersions) {
                     String statusStr = getModelVersionStatus(v);
-                    if (statusStr != null && statusStr.equals(targetStatus.toString())) {
-                        try {
-                            obj = new LinkedEntity();
-                            obj.setInstanceId(getModelStrProperty(v, "getInstanceId"));
-                            obj.setMetaId(getModelStrProperty(v, "getMetaId"));
-                            obj.setUid(getModelStrProperty(v, "getUid"));
-                            obj.setEntityType(linkedEntity.getEntityType());
-                            break;
-                        } catch (Exception e) {
-                            e.printStackTrace();
-                        }
+                    if (targetStatusStr.equals(statusStr)) {
+                        obj = buildLinkedEntity(v, linkedEntityType);
+                        break;
                     }
                 }
             }
@@ -254,12 +254,10 @@ public class RelationChecker {
                         && relationEntity.getStatus() != null
                         && !mainEntity.getStatus().equals(relationEntity.getStatus());
 
-                boolean isReference = linkedEntity.getEntityType() != null &&
-                        REFERENCE_ENTITIES.contains(linkedEntity.getEntityType().toUpperCase());
+                boolean isReference = linkedEntityTypeUpper != null && REFERENCE_ENTITIES.contains(linkedEntityTypeUpper);
+                boolean isSharedReference = isSharedReferenceEntity(linkedEntityType);
 
-                // FIX: For shared reference entities, don't propagate status
-                boolean isSharedReference = isSharedReferenceEntity(linkedEntity.getEntityType());
-
+                // For shared reference entities, don't propagate status changes
                 if (statusMismatch && !isReference && !isSharedReference) {
                     relationEntity.setStatus(mainEntity.getStatus());
 
@@ -269,8 +267,8 @@ public class RelationChecker {
                     }
 
                     if (obj == null) {
-                        obj = AbstractAPI.retrieveAPI(EntityNames.valueOf(linkedEntity.getEntityType()
-                                        .toUpperCase(Locale.ROOT)).name())
+                        String apiName = EntityNames.valueOf(linkedEntityTypeUpper).name();
+                        obj = AbstractAPI.retrieveAPI(apiName)
                                 .create(relationEntity, overrideStatus, oldLinkedEntityMainEntity, newLinkedEntityMainEntity);
 
                         if (Boolean.TRUE.equals(enableStore)) {
@@ -286,134 +284,147 @@ public class RelationChecker {
                 List<Object> results = EposDataModelDAO.getInstance()
                         .getOneFromDBByLinkedEntity(linkedEntity, clazz);
 
+                // Try direct instanceId lookup if linked entity search fails
                 if (results.isEmpty() && linkedEntity.getInstanceId() != null) {
-                    results = EposDataModelDAO.getInstance().getOneFromDBByInstanceIdNoCache(linkedEntity.getInstanceId(), clazz);
+                    results = EposDataModelDAO.getInstance()
+                            .getOneFromDBByInstanceIdNoCache(linkedEntity.getInstanceId(), clazz);
                 }
 
                 if (!results.isEmpty()) {
-                    // FIX: For shared reference entities, prefer PUBLISHED version from results
-                    if (shouldUsePublishedVersion(linkedEntity.getEntityType(), mainEntity)) {
+                    // For shared reference entities, prefer PUBLISHED from results
+                    if (shouldUsePublishedVersion(linkedEntityType, mainEntity)) {
                         for (Object result : results) {
                             String status = getModelVersionStatus(result);
-                            if (StatusType.PUBLISHED.toString().equals(status)) {
-                                obj = createLinkedEntityFromModel(result, linkedEntity.getEntityType());
+                            if (STATUS_PUBLISHED.equals(status)) {
                                 return result;
                             }
                         }
                     }
                     obj = linkedEntity;
                 } else {
-                    if (linkedEntity.getUid() != null) {
+                    // Try UID-based lookup
+                    String linkedUid = linkedEntity.getUid();
+                    if (linkedUid != null) {
                         List<Object> byUid = EposDataModelDAO.getInstance()
-                                .getOneFromDBByUIDNoCache(linkedEntity.getUid(), clazz);
-
-                        if (byUid.isEmpty()) {
-                            byUid = EposDataModelDAO.getInstance().getOneFromDBByUIDNoCache(linkedEntity.getUid(), clazz);
-                        }
+                                .getOneFromDBByUIDNoCache(linkedUid, clazz);
 
                         if (!byUid.isEmpty()) {
-                            // FIX: For shared reference entities, prefer PUBLISHED
-                            StatusType preferredStatus = shouldUsePublishedVersion(linkedEntity.getEntityType(), mainEntity)
+                            StatusType preferredStatus = shouldUsePublishedVersion(linkedEntityType, mainEntity)
                                     ? StatusType.PUBLISHED
-                                    : (overrideStatus != null ? overrideStatus : (mainEntity != null ? mainEntity.getStatus() : null));
+                                    : (overrideStatus != null ? overrideStatus :
+                                    (mainEntity != null ? mainEntity.getStatus() : null));
 
                             Object existing = findBestMatchingVersion(byUid, preferredStatus);
 
                             if (existing != null) {
-                                obj = new LinkedEntity();
-                                obj.setInstanceId(getModelStrProperty(existing, "getInstanceId"));
-                                obj.setMetaId(getModelStrProperty(existing, "getMetaId"));
-                                obj.setUid(getModelStrProperty(existing, "getUid"));
-                                obj.setEntityType(linkedEntity.getEntityType());
+                                obj = buildLinkedEntity(existing, linkedEntityType);
                             }
                         }
                     }
 
-                    if (obj == null) {
-                        if (Boolean.TRUE.equals(enableStore) && linkedEntity.getEntityType() != null) {
-                            try {
-                                String apiName = EntityNames.valueOf(linkedEntity.getEntityType().toUpperCase(Locale.ROOT)).name();
-                                AbstractAPI api = AbstractAPI.retrieveAPI(apiName);
-
-                                if (api != null) {
-                                    Class<?> dtoClass = null;
-                                    for (Method m : api.getClass().getMethods()) {
-                                        if (m.getName().equals("create") && m.getParameterCount() == 4) {
-                                            Class<?> paramType = m.getParameterTypes()[0];
-                                            if (org.epos.eposdatamodel.EPOSDataModelEntity.class.isAssignableFrom(paramType)) {
-                                                dtoClass = paramType;
-                                                break;
-                                            }
-                                        }
-                                    }
-
-                                    if (dtoClass != null) {
-                                        org.epos.eposdatamodel.EPOSDataModelEntity newDto =
-                                                (org.epos.eposdatamodel.EPOSDataModelEntity) dtoClass.getDeclaredConstructor().newInstance();
-                                        newDto.setUid(linkedEntity.getUid());
-                                        newDto.setInstanceId(UUID.randomUUID().toString());
-                                        newDto.setMetaId(UUID.randomUUID().toString());
-
-                                        // FIX: For shared reference entities, always create as PUBLISHED
-                                        StatusType createStatus;
-                                        if (shouldUsePublishedVersion(linkedEntity.getEntityType(), mainEntity)) {
-                                            createStatus = StatusType.PUBLISHED;
-                                            LOG.fine("[RelationChecker] REFERENCE_ENTITY: Creating " +
-                                                    linkedEntity.getEntityType() + " as PUBLISHED");
-                                        } else {
-                                            createStatus = overrideStatus != null ? overrideStatus :
-                                                    (mainEntity != null ? mainEntity.getStatus() : StatusType.DRAFT);
-                                        }
-                                        newDto.setStatus(createStatus);
-
-                                        LinkedEntity createdLe = api.create(newDto, createStatus, null, null);
-                                        if (createdLe != null) {
-                                            obj = createdLe;
-                                        }
-                                    }
-                                }
-                            } catch (Exception e) {
-                                LOG.warning("Failed to implicitly create stub entity: " + e.getMessage());
-                            }
-                        }
+                    // Last resort: create stub entity if enabled
+                    if (obj == null && Boolean.TRUE.equals(enableStore) && linkedEntityType != null) {
+                        obj = createStubEntity(linkedEntity, mainEntity, overrideStatus);
                     }
                 }
             }
         }
 
-        if (obj == null) return null;
+        if (obj == null) {
+            return null;
+        }
 
         List<Object> results = EposDataModelDAO.getInstance().getOneFromDBByLinkedEntity(obj, clazz);
         return results.isEmpty() ? null : results.get(0);
     }
 
     /**
-     * Finds the PUBLISHED version of an entity by LinkedEntity.
+     * Creates a stub entity when no existing version is found.
+     * Reference entities are created as PUBLISHED; others follow the main entity status.
      */
+    private static LinkedEntity createStubEntity(LinkedEntity linkedEntity,
+                                                 EPOSDataModelEntity mainEntity,
+                                                 StatusType overrideStatus) {
+        try {
+            String entityType = linkedEntity.getEntityType();
+            String apiName = EntityNames.valueOf(entityType.toUpperCase(Locale.ROOT)).name();
+            AbstractAPI api = AbstractAPI.retrieveAPI(apiName);
+
+            if (api == null) {
+                return null;
+            }
+
+            Class<?> dtoClass = findDtoClassForApi(api);
+            if (dtoClass == null) {
+                return null;
+            }
+
+            EPOSDataModelEntity newDto = (EPOSDataModelEntity) dtoClass.getDeclaredConstructor().newInstance();
+            newDto.setUid(linkedEntity.getUid());
+            newDto.setInstanceId(UUID.randomUUID().toString());
+            newDto.setMetaId(UUID.randomUUID().toString());
+
+            // Reference entities always create as PUBLISHED
+            StatusType createStatus;
+            if (shouldUsePublishedVersion(entityType, mainEntity)) {
+                createStatus = StatusType.PUBLISHED;
+                LOG.log(Level.FINE, "Reference entity: creating {0} as PUBLISHED", entityType);
+            } else {
+                createStatus = overrideStatus != null ? overrideStatus :
+                        (mainEntity != null ? mainEntity.getStatus() : StatusType.DRAFT);
+            }
+            newDto.setStatus(createStatus);
+
+            return api.create(newDto, createStatus, null, null);
+        } catch (Exception e) {
+            LOG.log(Level.WARNING, "Stub entity creation failed: {0}", e.getMessage());
+        }
+        return null;
+    }
+
+    /**
+     * Finds the DTO class for an API's create method via reflection.
+     * Result could be cached if this becomes a bottleneck.
+     */
+    private static Class<?> findDtoClassForApi(AbstractAPI api) {
+        for (Method m : api.getClass().getMethods()) {
+            if ("create".equals(m.getName()) && m.getParameterCount() == 4) {
+                Class<?> paramType = m.getParameterTypes()[0];
+                if (EPOSDataModelEntity.class.isAssignableFrom(paramType)) {
+                    return paramType;
+                }
+            }
+        }
+        return null;
+    }
+
+    @SuppressWarnings("rawtypes")
     private static Object findPublishedVersionOfEntity(LinkedEntity linkedEntity, Class clazz) {
         String uid = linkedEntity.getUid();
         if (uid != null) {
             List<Object> allVersions = EposDataModelDAO.getInstance().getOneFromDBByUIDNoCache(uid, clazz);
             for (Object v : allVersions) {
                 String status = getModelVersionStatus(v);
-                if (StatusType.PUBLISHED.toString().equals(status)) {
+                if (STATUS_PUBLISHED.equals(status)) {
                     return v;
                 }
             }
         }
 
-        // Try by instanceId
-        if (linkedEntity.getInstanceId() != null) {
-            List<Object> byInstanceId = EposDataModelDAO.getInstance().getOneFromDBByInstanceIdNoCache(linkedEntity.getInstanceId(), clazz);
+        // Fallback: resolve via instanceId if UID search fails
+        String instanceId = linkedEntity.getInstanceId();
+        if (instanceId != null) {
+            List<Object> byInstanceId = EposDataModelDAO.getInstance()
+                    .getOneFromDBByInstanceIdNoCache(instanceId, clazz);
             if (!byInstanceId.isEmpty()) {
                 Object found = byInstanceId.get(0);
-                // Get the UID and search for PUBLISHED
                 String foundUid = getModelStrProperty(found, "getUid");
                 if (foundUid != null) {
-                    List<Object> allVersions = EposDataModelDAO.getInstance().getOneFromDBByUIDNoCache(foundUid, clazz);
+                    List<Object> allVersions = EposDataModelDAO.getInstance()
+                            .getOneFromDBByUIDNoCache(foundUid, clazz);
                     for (Object v : allVersions) {
                         String status = getModelVersionStatus(v);
-                        if (StatusType.PUBLISHED.toString().equals(status)) {
+                        if (STATUS_PUBLISHED.equals(status)) {
                             return v;
                         }
                     }
@@ -424,10 +435,7 @@ public class RelationChecker {
         return null;
     }
 
-    /**
-     * Creates a LinkedEntity from a model object.
-     */
-    private static LinkedEntity createLinkedEntityFromModel(Object model, String entityType) {
+    private static LinkedEntity buildLinkedEntity(Object model, String entityType) {
         LinkedEntity le = new LinkedEntity();
         le.setInstanceId(getModelStrProperty(model, "getInstanceId"));
         le.setMetaId(getModelStrProperty(model, "getMetaId"));
@@ -437,34 +445,84 @@ public class RelationChecker {
     }
 
     private static Object findBestMatchingVersion(List<Object> versions, StatusType targetStatus) {
-        if (versions == null || versions.isEmpty()) return null;
-        if (targetStatus == null) return versions.get(0);
+        if (versions == null || versions.isEmpty()) {
+            return null;
+        }
+        if (targetStatus == null) {
+            return versions.get(0);
+        }
 
+        String targetStatusStr = targetStatus.toString();
         for (Object v : versions) {
             String status = getModelVersionStatus(v);
-            if (status != null && status.equals(targetStatus.toString())) return v;
+            if (targetStatusStr.equals(status)) {
+                return v;
+            }
         }
         return versions.get(0);
     }
 
+    /**
+     * Extracts the version status from a model entity using cached reflection.
+     */
     private static String getModelVersionStatus(Object modelEntity) {
         try {
-            Method getVersion = modelEntity.getClass().getMethod("getVersion");
-            Object versionObj = getVersion.invoke(modelEntity);
+            Object versionObj = invokeGetter(modelEntity, VERSION_GETTERS, "getVersion");
             if (versionObj != null) {
-                Method getStatus = versionObj.getClass().getMethod("getStatus");
-                Object statusObj = getStatus.invoke(versionObj);
+                Object statusObj = invokeGetter(versionObj, STATUS_GETTERS, "getStatus");
                 return statusObj != null ? statusObj.toString() : null;
             }
-        } catch (Exception e) { }
+        } catch (Exception ignored) {
+            // Method not found or invocation failed
+        }
         return null;
     }
 
     private static String getModelStrProperty(Object modelEntity, String methodName) {
         try {
-            Method method = modelEntity.getClass().getMethod(methodName);
-            Object result = method.invoke(modelEntity);
-            return result != null ? result.toString() : null;
-        } catch (Exception e) { return null; }
+            String cacheKey = modelEntity.getClass().getName() + "#" + methodName;
+            Method method = PROPERTY_GETTERS.computeIfAbsent(cacheKey, k -> {
+                try {
+                    return modelEntity.getClass().getMethod(methodName);
+                } catch (NoSuchMethodException e) {
+                    return null;
+                }
+            });
+            if (method != null) {
+                Object result = method.invoke(modelEntity);
+                return result != null ? result.toString() : null;
+            }
+        } catch (Exception ignored) {
+        }
+        return null;
+    }
+
+    /**
+     * Invokes a getter using cached MethodHandles for optimal performance.
+     */
+    private static Object invokeGetter(Object target, ConcurrentHashMap<Class<?>, MethodHandle> cache,
+                                       String methodName) {
+        Class<?> clazz = target.getClass();
+        MethodHandle handle = cache.get(clazz);
+
+        if (handle == null) {
+            try {
+                Method method = clazz.getMethod(methodName);
+                handle = LOOKUP.unreflect(method);
+                cache.put(clazz, handle);
+            } catch (NoSuchMethodException | IllegalAccessException e) {
+                return null;
+            }
+        }
+
+        try {
+            return handle.invoke(target);
+        } catch (Throwable t) {
+            // MethodHandle.invoke declares throws Throwable; propagate errors, suppress exceptions
+            if (t instanceof Error) {
+                throw (Error) t;
+            }
+            return null;
+        }
     }
 }
